# csv_log_cleaner

./: Cargo.toml  README.md  license.md
.github/workflows/: release.yml  test-and-format.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/e2e_data/: expected_output.csv  expected_output.json  test_input.csv  test_schema.json
