[package]
license = "MIT"
name = "csv_log_cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1"
clap = { version = "3.2.21", features = ["derive"] }
rustc-hash = "1.1.0"
rayon = "1.6.1"
num_cpus = "1.15.0"
tempfile = "3.3.0"

