[package]
license = "MIT"
name = "csv_log_cleaner"
version = "0.2.1"
description = "Clean CSV files to conform to a type schema by streaming them through small memory buffers using multiple threads and logging data loss."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
csv = "1.3.0"
clap = { version = "4.5.11", features = ["derive"] }
rustc-hash = "1.1.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
tempfile = "3.10.1"

